--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,24 +80,26 @@
       {{ content }}
 
       {% if page.layout == "post" %}
-        <!-- Giscus comments -->
-        <div id="comments"></div>
-        <script src="https://giscus.app/client.js"
-                data-repo="tobiasGuta/tobiasGuta.github.io"
-                data-repo-id="R_kgDOOxswYQ"
-                data-category="General"
-                data-category-id="DIC_kwDOOxswYc4CrEhp"
-                data-mapping="pathname"
-                data-strict="0"
-                data-reactions-enabled="1"
-                data-emit-metadata="0"
-                data-input-position="bottom"
-                data-theme="transparent_dark"
-                data-lang="en"
-                data-loading="lazy"
-                crossorigin="anonymous"
-                async>
-        </script>
+        {% unless page.locked or page.draft %}
+          <!-- Giscus comments - Only show for unlocked posts -->
+          <div id="comments"></div>
+          <script src="https://giscus.app/client.js"
+                  data-repo="tobiasGuta/tobiasGuta.github.io"
+                  data-repo-id="R_kgDOOxswYQ"
+                  data-category="General"
+                  data-category-id="DIC_kwDOOxswYc4CrEhp"
+                  data-mapping="pathname"
+                  data-strict="0"
+                  data-reactions-enabled="1"
+                  data-emit-metadata="0"
+                  data-input-position="bottom"
+                  data-theme="transparent_dark"
+                  data-lang="en"
+                  data-loading="lazy"
+                  crossorigin="anonymous"
+                  async>
+          </script>
+        {% endunless %}
       {% endif %}
     </main>
 
